# at-the-helm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json
client/: index.html  package.json  playwright.config.ts
client/src/: App.css  App.tsx  index.css
client/src/components/: AgentRoster.tsx  AuthModal.tsx  CommandConsole.tsx  GovernanceDashboard.tsx  KnowledgeBase.tsx  TelemetryBar.tsx  ToolActivityFeed.tsx
client/src/services/: api.ts
client/src/types/: index.ts
client/tests/: auth.spec.ts
data/: helm.db-shm  helm.db-wal
guardian/: Cargo.toml
guardian/src/: backup.rs  db.rs  heartbeat.rs  main.rs  watchdog.rs  watcher.rs
scratch/: check_db.ts  update_policy.ts  update_policy_robust.ts
server/: .env.example  package.json  test_gemini.ts  vitest.config.ts
server/scratch/: list_models.ts
server/src/: index.ts
server/src/db/: database.ts  seed.ts
server/src/middleware/: auth.ts  governance.ts  rbac.test.ts  rbac.ts
server/src/rag/: chunker.ts  search.ts
server/src/routes/: auth.ts  backup.ts  chat.ts  governance.ts  rag.ts
server/src/services/: guardian.ts  llm-router.ts  tools.ts
server/src/test/: setup.ts
temp_target/: .rustc_info.json
temp_target/debug/.fingerprint/ahash-3002c13bad9417fb/: run-build-script-build-script-build  run-build-script-build-script-build.json
temp_target/debug/.fingerprint/ahash-39faaa7857e11276/: build-script-build-script-build  build-script-build-script-build.json
temp_target/debug/.fingerprint/cc-d6bbd35449cf33d1/: lib-cc  (+1 more)
(+67 files in other folders)
